# ClimaFlask

./: README.md  app.py  pyproject.toml
static/: style.css
templates/: index.html  resultado.html
